<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/setting"
        android:title="@string/setting"
        android:icon="@drawable/my_setting"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/notes_list"
        android:title="@string/list_notes"
        android:icon="@drawable/my_list"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/shop_list"
        android:title="@string/shop_list"
        android:icon="@drawable/my_sopping"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/new_item"
        android:title="@string/new_item"
        android:icon="@drawable/my_new"
        app:showAsAction="ifRoom"
        />

</menu>